explorer add, comporesrs list demo, ui nav cleanup code, README frontend

--- a/templates/header.html
+++ b/templates/header.html
@@ -4,17 +4,17 @@
 
     <div class="col-md-6">
 
-        <h1>Jingle</h1>
+        <h1><a href="/">Jingle</a></h1>
 
     </div>
 
     <div id="header-links" class="col-md-3">
 
-        <a href="#/explore">Explore</a>
+        <a href="/#/explore">Explore</a>
 
-        <a href="#/create">Create</a>
+        <a href="/#/create">Create</a>
 
-        <a href="#/composers">Composers</a>
+        <a href="/#/composers">Composers</a>
 
     </div>
 
