--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,16 @@
                 {% include "splash.html" %}
             </div>
 
+            <div id="explore">
+                {% include "explore.html" %}
+            </div>
+
             <div id="creator">
                 {% include "creator.html" %}
+            </div>
+
+            <div id="composers">
+                {% include "composers.html" %}
             </div>
 
         </div>
