--- a/templates/creator.html
+++ b/templates/creator.html
@@ -1,1 +1,25 @@
 <h2>Create</h2>
+
+<div class="row">
+
+    <div class="col-md-3">
+        <p>Title</p>
+    </div>
+
+    <div class="col-md-9">
+        <input id="creator-title" placeholder="Title of the jingle" class="form-control" required>
+    </div>
+
+</div>
+
+<div class="row">
+
+    <div class="col-md-3">
+        <p>Description</p>
+    </div>
+
+    <div class="col-md-9">
+        <textarea id="creator-description" placeholder="Jingle description" class="form-control"></textarea>
+    </div>
+
+</div>
