note editor adds, code move over

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,13 +2,13 @@
 
 <div id="header" class="row">
 
-    <div class="col-md-6">
+    <div class="col-md-4">
 
         <h1><a href="/">Jingle</a></h1>
 
     </div>
 
-    <div id="header-links" class="col-md-3">
+    <div id="header-links" class="col-md-4">
 
         <a href="/#/explore">Explore</a>
 
@@ -18,9 +18,9 @@
 
     </div>
 
-    <div id="header-info" class="col-md-3">
+    <div id="header-info" class="col-md-4">
 
-        <p>Your Address : <b id="address-section"></b></p>
+        <p>Address : <b id="address-section"></b></p>
         <p>Network : <b id="network-section"></b></p>
 
     </div>
