--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
         <title>Jingle</title>
 
         <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="./node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
         <link href="./css/app.css" rel="stylesheet" type="text/css">
 
     </head>
@@ -37,7 +38,27 @@
 
         </div>
 
+        <script>
+
+var EM = {};
+
+        </script>
+
+        <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="./node_modules/nunjucks/browser/nunjucks.min.js"></script>
+
+        <script src="./js/Utils/AJAX.js"></script>
+        <script src="./js/Utils/EventDispatcher.js"></script>
+        <script src="./js/Utils/Templater.js"></script>
+        <script src="./js/Utils/Utils.js"></script>
+
         <script src="./js/Networks.js"></script>
+
+        <script src="./js/EditorHelper.js"></script>
+        <script src="./js/NotePicker.js"></script>
+        <script src="./js/Sequencer.js"></script>
+
         <script src="./js/UI.js"></script>
         <script src="./js/Navigator.js"></script>
         <script src="./js/App.js"></script>
