--- a/templates/creator.html
+++ b/templates/creator.html
@@ -23,3 +23,46 @@
     </div>
 
 </div>
+
+<h3>Music</h3>
+
+<ul class="nav nav-tabs" id="creator-tabs" role="tablist">
+
+    <li class="nav-item">
+        <a class="nav-link active" id="sequencer-tab" data-toggle="tab" href="#sequencer-content" role="tab">Sequencer</a>
+    </li>
+
+    <li class="nav-item">
+        <a class="nav-link" id="note-picker-tab" data-toggle="tab" href="#note-picker-content" role="tab">Note Picker</a>
+    </li>
+
+</ul>
+
+<div class="tab-content">
+
+    <div class="tab-pane fade" id="note-picker-content">
+        {% include "note-picker.html" %}
+    </div>
+
+    <div class="tab-pane fade show active" id="sequencer-content">
+        {% include "sequencer.html" %}
+    </div>
+
+</div>
+
+<div class="row">
+
+    <div class="col-md-12">
+
+        <h2>Hearing is Believing</h2>
+
+        <div id="note-creator-listen"></div>
+
+        <div id="note-creator-view"></div>
+
+        <div id="music-note-created" class="alert alert-success"></div>
+
+        <button type="submit" class="btn btn-success btn-block">Create Your Donation</button>
+    </div>
+
+</div>
