Jingle contract test API, profile page, jingle page navigation changes

--- a/templates/header.html
+++ b/templates/header.html
@@ -16,6 +16,8 @@
 
         <a href="/#/composers">Composers</a>
 
+        <a href="/#/profile">Profile</a>
+
     </div>
 
     <div id="header-info" class="col-md-4">
