fixed imports and exports, added rebuild script

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@ var EM = {};
 
         </script>
 
-        <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+        <!-- <script src="/node_modules/jquery/dist/jquery.min.js"></script>
         <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="/node_modules/nunjucks/browser/nunjucks.min.js"></script>
         <script src="/node_modules/async/dist/async.min.js"></script>
@@ -70,7 +70,9 @@ var EM = {};
         <script src="/js/UI.js"></script>
         <script src="/js/Navigator.js"></script>
         <script src="/js/App.js"></script>
-        <script src="/js/Main.js"></script>
+        <script src="/js/Main.js"></script> -->
+
+        <script src="/build/App.js"></script>
 
     </body>
 
