--- a/templates/explore.html
+++ b/templates/explore.html
@@ -1,9 +1,5 @@
 <h2>Explore</h2>
 
-<div class="piece-explore">
-
-    <h2><a href="/jingle/1">PIECE NAME</a></h2>
-
-    <p>Composer: <b>0xtest</b></p>
+<div id="piece-explore">
 
 </div>
