--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,10 @@
         <title>Jingle</title>
 
         <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="/css/font-awesome.min.css" rel="stylesheet">
+
+        <link href="/css/abcjs-midi.css" rel="stylesheet">
+
         <link href="/css/app.css" rel="stylesheet" type="text/css">
 
     </head>
@@ -50,27 +53,7 @@ var EM = {};
 
         </script>
 
-        <!-- <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="/node_modules/nunjucks/browser/nunjucks.min.js"></script>
-        <script src="/node_modules/async/dist/async.min.js"></script>
-
-        <script src="/js/Utils/AJAX.js"></script>
-        <script src="/js/Utils/EventDispatcher.js"></script>
-        <script src="/js/Utils/Templater.js"></script>
-        <script src="/js/Utils/Utils.js"></script>
-
-        <script src="/js/Networks.js"></script>
-
-        <script src="/js/EditorHelper.js"></script>
-        <script src="/js/NotePicker.js"></script>
-        <script src="/js/Sequencer.js"></script>
-
-        <script src="/js/Contract.js"></script>
-        <script src="/js/UI.js"></script>
-        <script src="/js/Navigator.js"></script>
-        <script src="/js/App.js"></script>
-        <script src="/js/Main.js"></script> -->
+        <script src="./js/lib/abcjs_midi_3.3.2-min.js"></script>
 
         <script src="/build/App.js"></script>
 
