--- a/templates/index.html
+++ b/templates/index.html
@@ -42,8 +42,9 @@
             <div id="profile">
             </div>
 
-            <div id="jingle">
-            </div>
+            <div id="jingle"></div>
+
+            <div id="account"></div>
 
         </div>
 
@@ -53,7 +54,7 @@ var EM = {};
 
         </script>
 
-        <script src="./js/lib/abcjs_midi_3.3.2-min.js"></script>
+        <script src="/js/lib/abcjs_midi_3.3.2-min.js"></script>
 
         <script src="/build/App.js"></script>
 
