--- a/app/templates/explore-view.html
+++ b/app/templates/explore-view.html
@@ -6,7 +6,7 @@
 
     <h2><a href="/jingle/{{ jingle.id }}">PIECE NAME NOT IMPLEMENTED</a></h2>
 
-    <p>Composer: <b>{{ jingle.account.address }}</b></p>
+    <p>Composer: <a href="/accounts/{{ jingle.account.address }}"><b>{{ jingle.account.address }}</b></a></p>
 
 </div>
 
