composers list add

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -1,5 +1,12 @@
-<h2> {{ account.name }}</h2>
+<h2>{{ account.name }}</h2>
 <h3>{{ account.address }}</h3>
+
+<div>
+    <a href="http://etherscan.io/address/{{ account.address }}" target="_blank" class="btn btn-info">View on Etherscan</a>
+</div>
+
+<hr>
+
 
 <h4>Jingles</h4>
 
