missed template updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,12 +35,9 @@
                 {% include "creator.html" %}
             </div>
 
-            <div id="composers">
-                {% include "composers.html" %}
-            </div>
+            <div id="composers"></div>
 
-            <div id="profile">
-            </div>
+            <div id="profile"></div>
 
             <div id="jingle"></div>
 
