--- a/templates/splash.html
+++ b/templates/splash.html
@@ -1,1 +1,3 @@
-<h2>The latest and greatest</h2>
+<h2>Jingle</h2>
+
+<p>This app is an ethereum contract with which you can create your own melody and keep it as an ERC721 token. Like CryptoKitties, your melody is unique too you. You can sell it or use our plugin for using the sound in your own dapps.</p>
