--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
 
     <div class="col-md-4">
 
-        <h1><a href="/">Jingle</a></h1>
+        <h1><a href="/">Motif</a></h1>
 
     </div>
 
@@ -20,7 +20,7 @@
 
     </div>
 
-    <div id="header-info" class="col-md-4">
+    <div id="header-info" class="col-md-4" style="display: block">
 
         <p>Address : <b id="address-section"></b></p>
         <p>Network : <b id="network-section"></b></p>
