--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
         <meta name="viewport" content="width=device-width">
 
-        <title>Jingle</title>
+        <title>Motif</title>
 
         <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="/css/font-awesome.min.css" rel="stylesheet">
