--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,6 +1,10 @@
 /**
  * Global
  */
+html, body {
+    overflow-x: hidden;
+}
+
 a {
     cursor: pointer;
 }
@@ -16,17 +20,22 @@ a {
 
 #header {
     padding: 5px;
-    border-bottom: solid 2px #DF0000;
+    border-bottom: solid 2px #000;
+    background: #BB0000;
+    color: #FFF;
+}
+
+#header a {
+    color: #FFF;
 }
 
 #network-section {
-    color: #28a745;
+    color: #000;
 }
 
 #header-links a {
+    color: #FFF;
     padding: 10px;
-    background: #000;
-    color: #DF0000;
     top: 1em;
     position: relative;
 }
