--- a/templates/splash.html
+++ b/templates/splash.html
@@ -1,3 +1,3 @@
-<h2>Jingle</h2>
+<h2>Motif</h2>
 
-<p>This app is an ethereum contract with which you can create your own melody and keep it as an ERC721 token. Like CryptoKitties, your melody is unique too you. You can sell it or use our plugin for using the sound in your own dapps.</p>
+<p>This app is an ethereum contract with which you can create your own melody and keep it as an ERC721 token. Like CryptoKitties, your melody is unique to you, as each unique melody is cryptographically stored as a hash on the Ethereum blockchain. You can sell your melodies or use our plugin for using your owned and unique sounds in your own dapps or across the Ethereum network. You will also be able to create new Compositions with other people's melodies by paying a small fee to them.</p>
