--- a/templates/splash.html
+++ b/templates/splash.html
@@ -1,3 +1,6 @@
-<h2>Jingle</h2>
-
 <p>This app is an ethereum contract with which you can create your own melody and keep it as an ERC721 token. Like CryptoKitties, your melody is unique too you. You can sell it or use our plugin for using the sound in your own dapps.</p>
+
+
+<h2>What it does</h2>
+
+<p>Create a single base melody and stores it as an ERC721 token. The melody is then run through keccak256 in order to get a hash of the melody's data i.e. pitches, durations, and starting times. The melody must be sent to the contract already sorted and formatted correctly, which we take care of on the client side. We store the data in a format that checks the melody across keys, if you write your melody in C, you will still 'own' that melody in D or F#. Users may also combine other people's melodies with their own in order to create larger, more complex compositions by paying a composition price decided by a melody's owner. Composers are incentivized to write quality, unique melodies in order to get other people to use them in their own compositions. Users will also be able to choose a melody to represent themselves on the blockchain as an avatar, similar to EthMoji.</p>
