display pitch and name adds motif renames

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -20,8 +20,8 @@
 
     {% for jingle in account.jingles %}
     <tr>
-        <td><a href="/jingle/{{ jingle.id }}">{{ jingle.id }}</a></td>
-        <td><a href="/jingle/{{ jingle.id }}">{{ jingle.name }}</a></td>
+        <td><a href="/motif/{{ jingle.id }}">{{ jingle.id }}</a></td>
+        <td><a href="/motif/{{ jingle.id }}">{{ jingle.title }}</a></td>
         <td><b>{{ jingle.price }}</b> ETH</td>
     </tr>
     {% endfor %}
