--- a/app/templates/explore-view.html
+++ b/app/templates/explore-view.html
@@ -4,7 +4,7 @@
 
 <div class="piece-explore-view">
 
-    <h2><a href="/jingle/{{ jingle.id }}">{{ jingle.name }}</a></h2>
+    <h2><a href="/motif/{{ jingle.id }}">{{ jingle.title }}</a></h2>
 
     <p>Composer: <a href="/accounts/{{ jingle.account.address }}"><b>{{ jingle.account.address }}</b></a></p>
 
