--- a/templates/creator.html
+++ b/templates/creator.html
@@ -9,7 +9,7 @@
         </div>
 
         <div class="col-md-9">
-            <input id="creator-title" placeholder="Title of the jingle" class="form-control" required>
+            <input id="creator-title" placeholder="Title of the Motif" class="form-control" required>
         </div>
 
     </div>
@@ -60,7 +60,7 @@
 
             <div id="music-note-created" class="alert alert-success"></div>
 
-            <button type="submit" class="btn btn-success btn-block">Create Jingle</button>
+            <button type="submit" class="btn btn-success btn-block">Create Motif</button>
 
         </div>
 
