build messages, rename misses

--- a/app/templates/composers.html
+++ b/app/templates/composers.html
@@ -3,7 +3,7 @@
 <table class="table table-bordered">
     <tr>
         <th>Address</th>
-        <th># Jingles</th>
+        <th># Motifs</th>
     </tr>
 
     {% for account in accounts %}
