start pushing history make better one page app

--- a/templates/header.html
+++ b/templates/header.html
@@ -10,13 +10,13 @@
 
     <div id="header-links" class="col-md-4">
 
-        <a href="/#/explore">Explore</a>
+        <a href="/explore">Explore</a>
 
-        <a href="/#/create">Create</a>
+        <a href="/create">Create</a>
 
-        <a href="/#/composers">Composers</a>
+        <a href="/composers">Composers</a>
 
-        <a href="/#/profile">Profile</a>
+        <a href="/profile">Profile</a>
 
     </div>
 
