fix account redirect <b> tag bug

--- a/app/templates/explore-view.html
+++ b/app/templates/explore-view.html
@@ -6,7 +6,7 @@
 
     <h2><a href="/motif/{{ jingle.id }}">{{ jingle.title }}</a></h2>
 
-    <p>Composer: <a href="/accounts/{{ jingle.account.address }}"><b>{{ jingle.account.address }}</b></a></p>
+    <p>Composer: <a href="/accounts/{{ jingle.account.address }}" class="account-link">{{ jingle.account.address }}</a></p>
 
 </div>
 
