--- a/app/templates/jingle.html
+++ b/app/templates/jingle.html
@@ -1,6 +1,6 @@
 <h2>{{ jingle.name }}</h2>
 
-<p>Creator <a href="/accounts/{{ jingle.account.address }}"><b>{{ jingle.account.address }}</b></a></p>
+<p>Creator <a href="/accounts/{{ jingle.account.address }}" class="account-link">{{ jingle.account.address }}</a></p>
 
 {% if not jingle.owner %}
 
