changed jingle links to motif and switched etherscan ton rinkeby

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -33,8 +33,8 @@
 
     {% for jingle in account.jingles %}
     <tr>
-        <td><a href="/jingle/{{ jingle.id }}">{{ jingle.id }}</a></td>
-        <td><a href="/jingle/{{ jingle.id }}">{{ jingle.name }}</a></td>
+        <td><a href="/motif/{{ jingle.id }}">{{ jingle.id }}</a></td>
+        <td><a href="/motif/{{ jingle.id }}">{{ jingle.name }}</a></td>
         <td><b>{{ jingle.price }}</b> ETH</td>
     </tr>
     {% endfor %}
