--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -2,7 +2,7 @@
 <h3>{{ account.address }}</h3>
 
 <div>
-    <a href="http://etherscan.io/address/{{ account.address }}" target="_blank" class="btn btn-info">View on Etherscan</a>
+    <a href="https://rinkeby.etherscan.io/address/{{ account.address }}" target="_blank" class="btn btn-info">View on Etherscan</a>
 </div>
 
 <hr>
